setting background and z-index of fixed header div

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -101,6 +101,8 @@
 .fixedHeader {
     position: fixed;
     height: 56px;
+    background: white;
+    z-index: 999;
 }
 
 //.home {
